Refactored core classes to replace `Weapon` with `GunWeapon` for improved type accuracy and consistency.